  to walk each reference sequence only once (instead of twice) in order to
  get the hits in both strands (+ and -).

o Removed the XStringList class and family.

o Moved the IRanges, UnlockedIRanges, LockedIRanges, NormalIRanges,
  MaskCollection, Views, and XInteger classes and their methods to the new
  IRanges package.

C-LEVEL FACILITIES

UTILITIES

o Added fasta.info() for fast extraction of the descriptions and lengths of
  the sequences stored in a FASTA file. Also renamed the 'strip.desc' argument
  of readFASTA() -> 'strip.descs'.

o Renamed replaceLetterAtLoc() -> replaceLetterAt() and renamed its 'loc'
  argument -> 'at'. Deprecated replaceLetterAtLoc().

o Added predefined 'RNA_GENETIC_CODE' object.

o Moved the utility functions for importing a mask (read.agpMask(),
  read.gapMask(), read.liftMask(), read.rmMask() and read.trfMask() functions)
  to the new IRanges package.

o Moved the generic functions for width(), shift(), restrict(), narrow(),
  reduce(), gaps(), reverse(), coverage(), subject(), views(), trim(), and
  subviews() to new IRanges package.

STRING MATCHING

o Addition of the 'dups0' slot to the ByPos_MIndex class: this allows a more
  compact representation in memory of a ByPos_MIndex object that holds the
  hits of a set of patterns that has a lot of duplicates. The benefit is
  really noticeable when the patterns that are highly represented in the
  original dictionary have a lot of hits which seems to be typically the
  case when matching Solexa data against their reference genome. In this
  case, using the new 'dups0' slot can make the ByPos_MIndex object about 3
  times smaller.
  Take advantage of this new 'dups0' slot to improve the way duplicated
  patterns are handle thru the "PDict -> matchPDict() -> MIndex" pipe. The
  new strategy is to "remove them as early as possible and put them back as
  late as possible". This leads to a gain in speed and also less memory is
  needed to store the hits in the temporary buffer.
