@@ -25,6 +25,9 @@ C-LEVEL FACILITIES
 
 UTILITIES
 
+o Added the uniqueLetters() generic function with methods for XString,
+  XStringSet, XStringViews and MaskedXString objects.
+
 o Added fasta.info() for fast extraction of the descriptions and lengths of
   the sequences stored in a FASTA file. Also renamed the 'strip.desc' argument
   of readFASTA() -> 'strip.descs'.
